e-shop example app/overlays/webapp/lab/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp

spec:

  template:    
    spec:
      containers:
      - name: webapp
        volumeMounts:
          - name: ca-pemstore
            mountPath: /etc/ssl/certs/metacortex.pem
            subPath: metacortex.pem
            readOnly: false  
          - name: cert
            mountPath: app/certs/web.pfx
            subPath: web.pfx
            readOnly: false  
      imagePullSecrets:
      - name: sustainabilitylab
      volumes:
          - name: ca-pemstore
            configMap:
              name: ca-pemstore
              items: 
              - key: MetacortexPharmaceuticalIssuingCA-chain.pem
                path: metacortex.pem
          - name: cert
            secret:
              secretName: webapp-cert
              items: 
              - key: tls.pfx
                path: web.pfx
