e-shop example app/overlays/webapp/lab/ingress-route-tcp.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: webapp-ingress-route-tcp

spec:
  routes:
    - match: HostSNI(`e-shop.aks.carbon-aware-computing.com`)
      services:
        - name: webapp
          port: 8443
  tls:
    passthrough: true
